Add working DiagramCanvas (nodes only)

--- a/samples/Wasm/wwwroot/index.html
+++ b/samples/Wasm/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="_content/Blazor.Diagrams/style.css" rel="stylesheet" />
+    <link href="_content/Blazor.Diagrams/default.styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -20,6 +21,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Blazor.Diagrams/script.js"></script>
 </body>
 
 </html>
