--- a/samples/Wasm/wwwroot/index.html
+++ b/samples/Wasm/wwwroot/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Wasm</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="_content/Blazor.Diagrams/style.css" rel="stylesheet" />
-    <link href="_content/Blazor.Diagrams/default.styles.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+    <script defer="" src="_content/SharedDemo/fontawesome/js/all.js"></script>
+    <link rel="stylesheet" href="_content/SharedDemo/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="_content/SharedDemo/plugins/prism/prism.css">
+    <link rel="stylesheet" href="_content/SharedDemo/plugins/elegant_font/css/style.css">
+    <link id="theme-style" rel="stylesheet" href="_content/SharedDemo/css/styles.css">
+    <link href="_content/Z.Blazor.Diagrams/style.css" rel="stylesheet" />
+    <link href="_content/Z.Blazor.Diagrams/default.styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -53,7 +57,13 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="_content/Blazor.Diagrams/script.js"></script>
+    <script type="text/javascript" src="_content/SharedDemo/plugins/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="_content/SharedDemo/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="_content/SharedDemo/plugins/prism/prism.js"></script>
+    <script type="text/javascript" src="_content/SharedDemo/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
+    <script type="text/javascript" src="_content/SharedDemo/plugins/stickyfill/dist/stickyfill.min.js"></script>
+    <script type="text/javascript" src="_content/SharedDemo/js/main.js"></script>
+    <script src="_content/Z.Blazor.Diagrams/script.js"></script>
 </body>
 
 </html>
