--- a/samples/Wasm/wwwroot/index.html
+++ b/samples/Wasm/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Wasm</title>
+    <title>Blazor.Diagrams</title>
     <base href="/" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <script defer="" src="_content/SharedDemo/fontawesome/js/all.js"></script>
